<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">FooPing</string>
	<string name="app_desc">The Foo Pinger</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="alarm_started">Ping started</string>
	<string name="alarm_stopped">Ping cancelled</string>
	<string name="alarm_running">Ping running</string>
	<string name="interval_1s">1s</string>
	<string name="interval_10s">10s</string>
	<string name="interval_60s">1 minute</string>
	<string name="interval_300s">5 minutes</string>
	<string name="interval_900s">15 minutes</string>
	<string name="interval_1800s">30 minutes</string>
	<string name="interval_3600s">hour</string>
	<string name="interval_86400s">day</string>
	<string name="Settings">Preferences</string>
	<string name="DataSettings">Data sources</string>
	<string name="UpdateInterval">Update interval</string>
	<string name="ClientSettings">Client</string>
	<string name="ServerSettings">Server</string>
	<string name="UseBattery">Battery status</string>
	<string name="UseWIFI">Cached WIFI scan</string>
	<string name="UseGPS">Cached GPS location</string>
	<string name="UseNetwork">Cached Network location</string>
	<string name="UseSensors">Sensor readings</string>
	<string name="UseConn">Connection status</string>
	<string name="UseConnActive">Active connection</string>
	<string name="UseConnAll">All connections</string>
	<string name="SendGZIP">Compression</string>
	<string name="SendAES">Encryption</string>
	<string name="StartOnBoot">Start service on boot</string>
	<string name="ClientID">Client ID</string>
	<string name="ExchangeHost">Server name</string>
	<string name="ExchangePort">Server port</string>
	<string name="ExchangeKey">Encryption key</string>
</resources>
