<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" android:layout_width="fill_parent">

	<TextView
		android:id="@+id/DataSettings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/DataSettings"
		style="?android:attr/listSeparatorTextViewStyle" />

	<Switch
		android:id="@+id/UseBattery"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/UseBattery" />

	<Switch
		android:id="@+id/UseWIFI"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/UseWIFI" />

	<Switch
		android:id="@+id/UseGPS"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/UseGPS" />

	<Switch
		android:id="@+id/UseNetwork"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/UseNetwork" />

	<Switch
		android:id="@+id/UseSensors"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/UseSensors" />

	<TextView
		android:id="@+id/IntervalSettings"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/IntervalSettings"
		style="?android:attr/listSeparatorTextViewStyle" />

	<TextView
		android:id="@+id/UpdateInterval"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="right"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<SeekBar
		android:id="@+id/UpdateIntervalSeekBar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" />

	<Switch
		android:id="@+id/SendGZIP"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/SendGZIP"
		android:enabled="false" />

	<Switch
		android:id="@+id/SendAES"
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:text="@string/SendAES"
		android:enabled="false" />

	<ToggleButton
		android:id="@+id/StartStopButton"
		android:layout_width="match_parent"
		android:layout_height="90dp"
		android:textOn="@string/stop"
		android:textOff="@string/start" />
</LinearLayout>
